[gd_scene load_steps=10 format=2]

[ext_resource path="res://DÃ¹ng-trong-game.png" type="Texture" id=1]
[ext_resource path="res://OptionScene.gd" type="Script" id=2]
[ext_resource path="res://TransitionScreen.gd" type="Script" id=3]
[ext_resource path="res://Signal.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fading"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/path = NodePath("Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[node name="OptionScene" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 540, 299 )
scale = Vector2( 0.5625, 0.551852 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 54.0
margin_top = 269.0
margin_right = 473.0
margin_bottom = 337.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="Button" parent="VBoxContainer"]
margin_right = 419.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../Hard")
focus_neighbour_right = NodePath("../../VBoxContainer2/Tutorial")
custom_colors/font_color_disabled = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_focus = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_hover = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.929412, 0.890196, 1 )
text = "Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Normal" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 419.0
margin_bottom = 44.0
focus_neighbour_right = NodePath("../../VBoxContainer2/Back")
custom_colors/font_color_disabled = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_focus = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_hover = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.929412, 0.890196, 1 )
text = "Normal"

[node name="Hard" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 419.0
margin_bottom = 68.0
focus_neighbour_right = NodePath("../../VBoxContainer2/Back")
focus_neighbour_bottom = NodePath("../Easy")
custom_colors/font_color_disabled = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_focus = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_hover = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.929412, 0.890196, 1 )
text = "Hard"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 499.0
margin_top = 271.0
margin_right = 918.0
margin_bottom = 319.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Button" parent="VBoxContainer2"]
margin_right = 419.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../../VBoxContainer/Easy")
focus_neighbour_top = NodePath("../Back")
custom_colors/font_color_disabled = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_focus = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_hover = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.929412, 0.890196, 1 )
text = "Tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="VBoxContainer2"]
margin_top = 24.0
margin_right = 419.0
margin_bottom = 44.0
focus_neighbour_left = NodePath("../../VBoxContainer/Normal")
focus_neighbour_bottom = NodePath("../Tutorial")
custom_colors/font_color_disabled = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_focus = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_hover = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.929412, 0.890196, 1 )
text = "Back"

[node name="TransitionScreen" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="TransitionScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransitionScreen"]
autoplay = "appear"
anims/RESET = SubResource( 1 )
anims/appear = SubResource( 2 )
anims/fading = SubResource( 3 )

[node name="CurrentScene" type="Node2D" parent="."]

[node name="Scene" type="CenterContainer" parent="CurrentScene"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/Fade = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Signal" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="d" from="." to="TransitionScreen" method="_on_OptionScene_d"]
[connection signal="easy" from="." to="Signal" method="_on_OptionScene_easy"]
[connection signal="hard" from="." to="Signal" method="_on_OptionScene_hard"]
[connection signal="na" from="." to="TransitionScreen" method="_on_OptionScene_na"]
[connection signal="normal" from="." to="Signal" method="_on_OptionScene_normal"]
[connection signal="pressed" from="VBoxContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="VBoxContainer/Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="VBoxContainer/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="VBoxContainer2/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer2/Back" to="." method="_on_Back_pressed"]
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
[connection signal="animation_finished" from="TransitionScreen/AnimationPlayer" to="TransitionScreen" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
